--- a/card-display.html
+++ b/card-display.html
@@ -27,9 +27,9 @@
     
     <template is="dom-if" if="{{veiwable}}" restamp>
       <template is="dom-repeat" items="{{cards}}" as="card" observe="title data">
-        <div style="max-width:45%;float:left;heigth:250px">
+        <div style="max-width:45%;float:left;heigth:250px" on-tap="tapped">
           <template is="dom-if" if="{{isCard(card,'deck')}}">
-            <div style="margin: 5px 0" on-tap="openDeck"  data-index="{{index}}">
+            <div style="margin: 5px 0" on-tap="openDeck" data-index="{{index}}">
               <card-deck elevation="4" width="200" height="250" style="max-width:95%;width:200px;height:240px;margin:12px 7px">
                 <div style="max-width:70%;width: 147px; height: 147px; padding: 0 15%" data-index="{{index}}">
                   <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet"><g class="style-scope iron-icon"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z" class="style-scope iron-icon"></path></g></svg>
@@ -51,7 +51,7 @@
     <template is="dom-if" if="{{sortable}}" restamp>
       <sortable-list sort-me="{{cards}}" output="{{sortMe}}">
         <template id="cardsS" is="dom-repeat" items="{{sortMe}}" as="card" observe="title data">
-          <div style="max-width:100%;float:left">
+          <div style="max-width:100%;float:left" on-tap="tapped" data-index="{{index}}">
             <template is="dom-if" if="{{isCard(card,'deck')}}">
               <div style="margin: 5px 0">
                 <card-deck elevation="4" width="200" height="250" style="max-width:95%;width:200px;height:240px;margin:12px 7px">
@@ -77,7 +77,7 @@
     <template is="dom-if" if="{{selectable}}" restamp>
       <iron-selector multi selected-values="{{selected}}">
         <template is="dom-repeat" items="{{cards}}" as="card" observe="title data">
-          <div style="max-width:100%;float:left">
+          <div style="max-width:100%;float:left" on-tap="tapped" data-index="{{index}}">
             <template is="dom-if" if="{{isCard(card,'deck')}}">
               <div style="margin: 5px 0">
                 <card-deck elevation="4" width="200" height="250" style="max-width:95%;width:200px;height:240px;margin:12px 7px">
