--- a/card-display.html
+++ b/card-display.html
@@ -34,11 +34,16 @@
             </div>
           </template>
           <template is="dom-if" if="{{isCard(card,'card')}}">
-            <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
-              <a href="{{card.url}}" target="_blank" style="text-decoration: initial;color: black"><div style="max-width:100%;background-size:c over;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div></a><br />
+            <template is="dom-if" if="{{!onLink}}">
+              <a href="{{card.url}}" target="_blank" style="text-decoration: initial;color: black"><div style="background-size:c over;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div></a><br />
               <a href="{{card.url}}" style="text-decoration: initial;color: black"><h3 style="margin: 0; padding: 13px;">{{card.title}}</h3></a>
               <a href="{{card.url}}" style="text-decoration: initial;color: black"><p style="margin: 0; padding: 0 13px;">{{card.data}}</p></a>
-            </paper-material>
+            </template>
+            <template is="dom-if" if="{{!onLink}}">
+              <div style="background-size:c over;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
+              <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
+              <p style="margin: 0; padding: 0 13px;">{{card.data}}</p>
+            </template>
           </template>
         </div>
       </template>
@@ -59,7 +64,6 @@
                   <a href="{{card.url}}" style="text-decoration: initial;color: black"><h3 style="margin: 0; padding: 13px;">{{card.title}}</h3></a>
                   <a href="{{card.url}}" style="text-decoration: initial;color: black"><p style="margin: 0; padding: 0 13px;">{{card.data}}</p></a>
                 </template>
-
                 <template is="dom-if" if="{{!onLink}}">
                   <div style="background-size:c over;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
                   <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
