--- a/card-display.html
+++ b/card-display.html
@@ -34,12 +34,12 @@
             </div>
           </template>
           <template is="dom-if" if="{{isCard(card,'card')}}">
-            <template is="dom-if" if="{{!onLink}}">
+            <template is="dom-if" if="{{cardHasLink(card)}}">
               <a href="{{card.url}}" target="_blank" style="text-decoration: initial;color: black"><div style="background-size:c over;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div></a><br />
               <a href="{{card.url}}" style="text-decoration: initial;color: black"><h3 style="margin: 0; padding: 13px;">{{card.title}}</h3></a>
               <a href="{{card.url}}" style="text-decoration: initial;color: black"><p style="margin: 0; padding: 0 13px;">{{card.data}}</p></a>
             </template>
-            <template is="dom-if" if="{{onLink}}">
+            <template is="dom-if" if="{{cardHasLink(card)}}">
               <div style="background-size:c over;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
               <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
               <p style="margin: 0; padding: 0 13px;">{{card.data}}</p>
@@ -59,12 +59,12 @@
             </template>
             <template is="dom-if" if="{{isCard(card,'card')}}">
               <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
-                <template is="dom-if" if="{{!onLink}}">
+                <template is="dom-if" if="{{cardHasLink(card)}}">
                   <a href="{{card.url}}" target="_blank" style="text-decoration: initial;color: black"><div style="background-size:c over;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div></a><br />
                   <a href="{{card.url}}" style="text-decoration: initial;color: black"><h3 style="margin: 0; padding: 13px;">{{card.title}}</h3></a>
                   <a href="{{card.url}}" style="text-decoration: initial;color: black"><p style="margin: 0; padding: 0 13px;">{{card.data}}</p></a>
                 </template>
-                <template is="dom-if" if="{{onLink}}">
+                <template is="dom-if" if="{{cardHasLink(card)}}">
                   <div style="background-size:c over;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
                   <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
                   <p style="margin: 0; padding: 0 13px;">{{card.data}}</p>
@@ -137,13 +137,11 @@
     getVeiwable: function(selectable, pickable, sortable) {
       return !(selectable || pickable || sortable)
     },
+    cardHasLink: function(card) {
+      return !(card.url.split(":")[0] === "user")
+    },
     isCard: function(card, isA){
       if (isA === "card") {
-        if (card.url.split(":")[0] === "user") {
-          this.noLink = true
-        } else {
-          this.noLink = false
-        }
         return (card.url.split(":")[0] === "https" || card.url.split(":")[0] === "http" || card.url.split(":")[0] === "user")
       }
       if (isA === "deck") {
