--- a/card-display.html
+++ b/card-display.html
@@ -47,6 +47,14 @@
                 </template>
               </paper-material>
           </template>
+          <template is="dom-if" if="{{isCard(card,'survey')}}">
+              <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
+                <template is="dom-if" if="{{cardHasLink(card)}}">
+                  <a href="{{card.url}}" style="text-decoration: initial;color: black"><h3 style="margin: 0; padding: 13px;">{{card.title}}</h3></a>
+                  <a href="{{card.url}}" style="text-decoration: initial;color: black"><p style="margin: 0; padding: 0 13px;">{{card.data}}</p></a>
+                </template>
+              </paper-material>
+          </template>
         </div>
       </template>
     </template>
@@ -110,8 +118,8 @@
           <template is="dom-if" if="{{isCard(card,'card')}}">
             <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
               <div style="max-width:100%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
-              <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
-              <p style="margin: 0; padding: 0 13px;">{{card.data}}</p>
+              <h3 style="margin: 0;padding: 13px;">{{card.title}}</h3>
+              <p style="margin: 0;padding: 0 13px;">{{card.data}}</p>
             </paper-material>
           </template>
           <paper-fab mini icon="touch-app"></paper-fab>
@@ -143,6 +151,9 @@
       return !(card.url.split(":")[0] === "user")
     },
     isCard: function(card, isA){
+      if (isA === "survey") {
+        return (card.url.split(":")[0] === "survey"
+      }
       if (isA === "card") {
         return (card.url.split(":")[0] === "https" || card.url.split(":")[0] === "http" || card.url.split(":")[0] === "user")
       }
