--- a/card-display.html
+++ b/card-display.html
@@ -120,6 +120,12 @@
               <p style="margin: 0;padding: 0 13px;">{{card.data}}</p>
             </paper-material>
           </template>
+          <template is="dom-if" if="{{isCard(card,'survey')}}">
+            <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
+                <a href="{{card.url}}" style="text-decoration: initial;color: black"><h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
+                <paper-button>Yes</paper-button><paper-button>No</paper-button>
+              </paper-material>
+          </template>
           <paper-fab mini icon="touch-app"></paper-fab>
         </div>
       </template>
