--- a/card-display.html
+++ b/card-display.html
@@ -24,6 +24,14 @@
       .iron-selected paper-fab {
         background: red;
       }
+      .cardstyle {
+        margin: 12px 7px; 
+        background: #fff; 
+        display: inline-block;
+        width: 190px; 
+        height: 235px; 
+        padding-top: 20px
+      }
     </style>
     
     <template is="dom-if" if="{{veiwable}}" restamp>
@@ -36,7 +44,7 @@
           </template>
           <template is="dom-if" if="{{isCard(card,'custom')}}">
             <template is="dom-if" if="{{!getCardAttr(card, lookup, 'hidden')}}">
-              <paper-material elevation="4" style="margin: 12px 7px;background: #fff;display: inline-block;width: 190px;height: 235px;padding-top: 20px">
+              <paper-material elevation="4" class="cardstyle">
                 <div data-index="{{index}}" inner-h-t-m-l="{{getCardAttr(card, lookup, 'html')}}"></div>
               </paper-material>
             </template>
@@ -54,7 +62,7 @@
               </div>
             </template>
             <template is="dom-if" if="{{isCard(card,'custom')}}">
-              <paper-material elevation="4" style=" margin: 12px 7px; background: #fff; display: inline-block; width: 190px; height: 235px; padding-top: 20px">
+              <paper-material elevation="4" class="cardstyle">
                 <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(card)}}"></div>
               </paper-material>
             </template>
@@ -72,7 +80,7 @@
               </div>
             </template>
             <template is="dom-if" if="{{isCard(card,'custom')}}">
-              <paper-material elevation="4" style=" margin: 12px 7px; background: #fff; display: inline-block; width: 190px; height: 235px; padding-top: 20px">
+              <paper-material elevation="4" class="cardstyle">
                 <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(card)}}"></div>
               </paper-material>
             </template>
@@ -90,7 +98,7 @@
             </div>
           </template>
           <template is="dom-if" if="{{isCard(card,'custom')}}">
-            <paper-material elevation="4" style=" margin: 12px 7px; background: #fff; display: inline-block; width: 190px; height: 235px; padding-top: 20px">
+            <paper-material elevation="4" class="cardstyle">
               <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(card)}}"></div>
             </paper-material>
           </template>
