--- a/card-display.html
+++ b/card-display.html
@@ -21,9 +21,9 @@
         background: gray;
         margin: -150px 88px;
       }
-      .iron-selected paper-fab {
+      /*.iron-selected paper-fab {
         background: red;
-      }
+      }*/
       .cardstyle {
         margin: 12px 7px; 
         background: #fff; 
@@ -33,18 +33,26 @@
         padding-top: 20px
       }
       .cardtitlestyle {
-        max-width:95%;
-        width:200px;
-        height:240px;
+        /*max-width:95%;*/
+        /*width:200px;*/
+        /*height:240px;*/
         margin:12px 7px;
       }
+      .cardcontainer {
+        /*max-width:100%;*/
+        float:left;
+      }
+      /*.cardtitlecontainer {
+        margin: 5px 0;
+      }*/
+      
     </style>
     
     <template is="dom-if" if="{{veiwable}}" restamp>
       <template is="dom-repeat" items="{{cards}}" as="card" observe="title data">
-        <div style="max-width:45%;float:left;heigth:250px" on-tap="tapped" data-index="{{index}}">
+        <div class="cardcontainer" on-tap="tapped" data-index="{{index}}">
           <template is="dom-if" if="{{isCard(card,'deck')}}">
-            <div style="margin: 5px 0" on-tap="openDeck" data-index="{{index}}">
+            <div class="cardtitlecontainer" on-tap="openDeck" data-index="{{index}}">
               <card-deck title="{{card.title}}" class="cardtitlestyle"></card-deck>
             </div>
           </template>
@@ -61,9 +69,9 @@
     <template is="dom-if" if="{{sortable}}" restamp>
       <sortable-list sort-me="{{cards}}" output="{{sortMe}}">
         <template id="cardsS" is="dom-repeat" items="{{sortMe}}" as="card" observe="title data">
-          <div style="max-width:100%;float:left" on-tap="tapped" data-index="{{index}}">
+          <div class="cardcontainer" on-tap="tapped" data-index="{{index}}">
             <template is="dom-if" if="{{isCard(card,'deck')}}">
-              <div style="margin: 5px 0">
+              <div class="cardtitlecontainer>
                 <card-deck title="{{card.title}}" class="cardtitlestyle"></card-deck>
               </div>
             </template>
@@ -79,9 +87,9 @@
     <template is="dom-if" if="{{selectable}}" restamp>
       <iron-selector multi selected-values="{{selected}}">
         <template is="dom-repeat" items="{{cards}}" as="card" observe="title data">
-          <div style="max-width:100%;float:left" on-tap="tapped" data-index="{{index}}">
+          <div class="cardcontainer" on-tap="tapped" data-index="{{index}}">
             <template is="dom-if" if="{{isCard(card,'deck')}}">
-              <div style="margin: 5px 0">
+              <div class="cardtitlecontainer>
                 <card-deck title="{{card.title}}" class="cardtitlestyle"></card-deck>
               </div>
             </template>
@@ -97,9 +105,9 @@
     </template>
     <template is="dom-if" if="{{pickable}}" restamp>
       <template is="dom-repeat" items="{{cards}}" as="card" observe="title data">
-        <div style="max-width:100%;float:left" on-tap="picked" data-index="{{index}}">
+        <div class="cardcontainer" on-tap="picked" data-index="{{index}}">
           <template is="dom-if" if="{{isCard(card,'deck')}}">
-            <div style="margin: 5px 0">
+            <div class="cardtitlecontainer>
               <card-deck title="{{card.title}}" class="cardtitlestyle"></card-deck>
             </div>
           </template>
