--- a/card-display.html
+++ b/card-display.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../paper-material/paper-material.html">
 <link rel="import" href="../sortable-list/sortable-list.html">
+<link rel="import" href="../mediator-data/mediator-data.html">
 <link rel="import" href="../iron-selector/iron-selector.html">
 <link rel="import" href="../paper-dialog/paper-dialog.html">
 <link rel="import" href="../update-data/update-data.html">
@@ -34,9 +35,6 @@
         padding-top: 20px
       }
       .deck {
-        /*max-width:95%;*/
-        /*width:200px;*/
-        /*height:240px;*/
         margin:12px 7px;
       }
       .cardcontainer {
@@ -44,9 +42,6 @@
         float:left;
         display: inline;
       }
-      /*.cardtitlecontainer {
-        margin: 5px 0;
-      }*/
       #deckbutton {
         float: left;
         width: 100%;
@@ -64,9 +59,7 @@
       paper-material {
         overflow: hidden;
       }
-
     </style>
-    
     <template is="dom-if" if="{{veiwable}}" restamp>
       <template is="dom-repeat" items="{{cards}}" as="card" observe="title data">
         <div class="cardcontainer" on-tap="tapped" data-index="{{index}}">
@@ -146,7 +139,8 @@
           <paper-button dialog-confirm autofocus>Close</paper-button>
         </div>
       </template>
-    </paper-dialog>  
+    </paper-dialog>
+    <mediator-data id="mediatorData"></mediator-data>
   </template>
 </dom-module>
 <script>
@@ -165,7 +159,7 @@
       return cards[index]
     },
     getCardAttr: function(card, lookup, attr){
-      card = lookup[card.url] || card
+      card = lookup[this.hash(card.url)] || card
       
       if (attr === "html") {
         return this.getHtml(card)
@@ -174,6 +168,9 @@
       } else {
         return card[attr]
       }
+    },
+    hash: function(it) {
+      return this.$.mediatorData.hash(it)
     },
     getHtml: function(card) {
       var output = ""
