--- a/card-display.html
+++ b/card-display.html
@@ -14,43 +14,13 @@
 <dom-module id="card-display">
   <template>
     <style>
-      paper-fab {
-        position: absolute;
-        background: gray;
-        margin: -150px 88px;
-        color: var(--button-background-color);
-      }
-      .iron-selected paper-fab {
-        background: var(--accent-color);
-      }
-      .cardcontainer {
-        float: left;
-        display: block;
-        height: 220px;
-        width: 167px;
-        margin: 6px;
-      }
-      #deckbutton {
-        float: left;
-        width: 100%;
-      }
-      #deckbutton paper-button {
-        background: var(--accent-color);
-        color: #fff;
-        margin-bottom: 20px;
-        font-weight: 500;
-      }
-      paper-dialog {
-        background: none;
-        box-shadow: none;
-      }
-      paper-material {
-
-        width: 100%;
-        height: 100%;
-        background: #fff;
-      }
-
+      paper-fab {position: absolute;background: gray;margin: -150px 88px;color: var(--button-background-color)}
+      .iron-selected paper-fab {background: var(--accent-color)}
+      .cardcontainer {float: left;display: block;height: 220px;width: 167px;margin: 6px}
+      #deckbutton {float: left;width: 100%}
+      #deckbutton paper-button {background: var(--accent-color);color: #fff;margin-bottom: 20px;font-weight: 500}
+      paper-dialog {background: none;box-shadow: none}
+      paper-material {width: 100%;height: 100%;background: #fff}
     </style>
     <template is="dom-if" if="{{veiwable}}" restamp>
       <template is="dom-repeat" items="{{cards}}" as="card" observe="title data">
@@ -151,8 +121,9 @@
       return cards[index]
     },
     getCardAttr: function(card, shared, attr){
-      card = shared[this.hash(card.url)].card || card
-      
+      if (shared.hasOwnProperty(this.hash(card.url)) && shared[this.hash(card.url)].hasOwnProperty("card")) {
+        card = shared[this.hash(card.url)].card
+      }
       if (attr === "html") {
         return this.getHtml(card)
       } else if (attr === "hidden") {
