--- a/card-display.html
+++ b/card-display.html
@@ -118,7 +118,7 @@
               <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(card)}}"></div>
             </paper-material>
           </template>
-          <paper-fab mini icon="touch-app"></paper-fab>
+          <paper-fab icon="touch-app"></paper-fab>
         </div>
       </template>
     </template>
