--- a/card-display.html
+++ b/card-display.html
@@ -48,6 +48,7 @@
         width: 100%;
         height: 100%;
         background: #fff;
+        overflow: hidden;
       }
     </style>
     <template is="dom-if" if="{{veiwable}}" restamp>
